--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -220,3 +220,46 @@ Searching..
 </body>
 </html>
 Input website:
+
+EXERCISE 1.8: TWO LINE DOCKERFILE
+-----------------------------------
+# Create the Dockerfile:
+FROM devopsdockeruh/simple-web-service:alpine
+CMD ["server"]
+
+# This Dockerfile uses the base image devopsdockeruh/simple-web-service:alpine and sets the default argument for the entrypoint to server
+
+# Build the Docker Image:
+# Use the docker build command to create a new image tagged as web-server.
+
+docker build -t web-server .
+# This command tells Docker to build an image using the Dockerfile in the current directory (.) and tag it as web-server.
+adeleke@machine:~/start$ sudo docker build -t web-server . 
+DEPRECATED: The legacy builder is deprecated and will be removed in a future release.
+            Install the buildx component to build images with BuildKit:
+            https://docs.docker.com/go/buildx/
+
+Sending build context to Docker daemon  2.048kB
+Step 1/2 : FROM devopsdockeruh/simple-web-service:alpine
+ ---> fd312adc88e0
+Step 2/2 : CMD ["server"]
+ ---> Running in ef7e9af41538
+Removing intermediate container ef7e9af41538
+ ---> 156c580c03fc
+Successfully built 156c580c03fc
+Successfully tagged web-server:latest
+
+# Run the Docker Container:
+# Use the docker run command to start a container from the web-server image.
+docker run web-server
+
+adeleke@machine:~/start$ sudo docker run web-server
+[GIN-debug] [WARNING] Creating an Engine instance with the Logger and Recovery middleware already attached.
+
+[GIN-debug] [WARNING] Running in "debug" mode. Switch to "release" mode in production.
+ - using env:	export GIN_MODE=release
+ - using code:	gin.SetMode(gin.ReleaseMode)
+
+[GIN-debug] GET    /*path                    --> server.Start.func1 (3 handlers)
+[GIN-debug] Listening and serving HTTP on :8080
+
