--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -302,4 +302,84 @@ runs the web service on port 8080 and
 maps that port to port 8080 on your host machine so that you can access it via your browser.
 
 
+EXERCISE 1.11: SPRING
+----------------------
+
+# Step-by-Step Guide
+Base Image: We'll use the Amazon Corretto 8 image, as the project requires Java 8.
+Working Directory: Set up a working directory within the container.
+Copy Files: Copy the Maven wrapper, Maven configuration, and project source code into the container.
+Install Maven Dependencies and Build the Project: Use Maven to build the project.
+Expose Port: Expose port 8080, as the application runs on this port.
+Run the Application: Use the java -jar command to run the built JAR file.
+
+# Dockerfile
+
+# Use Amazon Corretto 8 as the base image
+FROM amazoncorretto:8
+
+# Set the working directory
+WORKDIR /app
+
+# Copy the Maven wrapper and Maven configuration files
+COPY .mvn/ .mvn
+COPY mvnw pom.xml ./
+
+# Install Maven dependencies
+RUN ./mvnw dependency:go-offline
+
+# Copy the project source code
+COPY src ./src
+
+# Build the project
+RUN ./mvnw package
+
+# Expose port 8080
+EXPOSE 8080
+
+# Run the application
+CMD ["java", "-jar", "./target/docker-example-1.1.3.jar"]
+
+# Build the Docker Image:
+docker build -t spring-project .
+# Run the Docker Container:
+docker run -p 8080:8080 spring-project
+
+# Explanation
+FROM amazoncorretto:8: Specifies the base image with Java 8.
+WORKDIR /app: Sets the working directory inside the container to /app.
+COPY .mvn/ .mvn and COPY mvnw pom.xml ./: Copies the Maven wrapper and configuration files needed to build the project.
+RUN ./mvnw dependency:go-offline: Pre-downloads dependencies to reduce build time.
+COPY src ./src: Copies the project source code into the container.
+RUN ./mvnw package: Builds the project using Maven.
+EXPOSE 8080: Exposes port 8080 on the container.
+CMD ["java", "-jar", "./target/docker-example-1.1.3.jar"]: Runs the built JAR file.
+
+# on the browser
+
+http://localhost:8080.
+
+ .   ____          _            __ _ _
+ /\\ / ___'_ __ _ _(_)_ __  __ _ \ \ \ \
+( ( )\___ | '_ | '_| | '_ \/ _` | \ \ \ \
+ \\/  ___)| |_)| | | | | || (_| |  ) ) ) )
+  '  |____| .__|_| |_|_| |_\__, | / / / /
+ =========|_|==============|___/=/_/_/_/
+ :: Spring Boot ::        (v2.1.3.RELEASE)
+
+2024-05-24 12:23:56.306  INFO 1 --- [           main] c.d.dockerexample.DemoApplication        : Starting DemoApplication v1.1.3 on bc75ffb842c6 with PID 1 (/app/target/docker-example-1.1.3.jar started by root in /app)
+2024-05-24 12:23:56.350  INFO 1 --- [           main] c.d.dockerexample.DemoApplication        : No active profile set, falling back to default profiles: default
+2024-05-24 12:23:59.635  INFO 1 --- [           main] o.s.b.w.embedded.tomcat.TomcatWebServer  : Tomcat initialized with port(s): 8080 (http)
+2024-05-24 12:23:59.727  INFO 1 --- [           main] o.apache.catalina.core.StandardService   : Starting service [Tomcat]
+2024-05-24 12:23:59.728  INFO 1 --- [           main] org.apache.catalina.core.StandardEngine  : Starting Servlet engine: [Apache Tomcat/9.0.16]
+2024-05-24 12:23:59.761  INFO 1 --- [           main] o.a.catalina.core.AprLifecycleListener   : The APR based Apache Tomcat Native library which allows optimal performance in production environments was not found on the java.library.path: [/usr/java/packages/lib/amd64:/usr/lib64:/lib64:/lib:/usr/lib]
+2024-05-24 12:23:59.969  INFO 1 --- [           main] o.a.c.c.C.[Tomcat].[localhost].[/]       : Initializing Spring embedded WebApplicationContext
+2024-05-24 12:23:59.969  INFO 1 --- [           main] o.s.web.context.ContextLoader            : Root WebApplicationContext: initialization completed in 3450 ms
+2024-05-24 12:24:00.322  INFO 1 --- [           main] o.s.s.concurrent.ThreadPoolTaskExecutor  : Initializing ExecutorService 'applicationTaskExecutor'
+2024-05-24 12:24:00.685  INFO 1 --- [           main] o.s.b.a.w.s.WelcomePageHandlerMapping    : Adding welcome page template: index
+2024-05-24 12:24:00.970  INFO 1 --- [           main] o.s.b.w.embedded.tomcat.TomcatWebServer  : Tomcat started on port(s): 8080 (http) with context path ''
+2024-05-24 12:24:00.974  INFO 1 --- [           main] c.d.dockerexample.DemoApplication        : Started DemoApplication in 6.279 seconds (JVM running for 8.46)
+2024-05-24 12:32:23.055  INFO 1 --- [nio-8080-exec-1] o.a.c.c.C.[Tomcat].[localhost].[/]       : Initializing Spring DispatcherServlet 'dispatcherServlet'
+2024-05-24 12:32:23.055  INFO 1 --- [nio-8080-exec-1] o.s.web.servlet.DispatcherServlet        : Initializing Servlet 'dispatcherServlet'
+2024-05-24 12:32:23.083  INFO 1 --- [nio-8080-exec-1] o.s.web.servlet.DispatcherServlet        : Completed initialization in 28 ms
 
