--- a/MANDATORY-EXERCISES/example-backend/.gitignore
+++ b/MANDATORY-EXERCISES/example-backend/.gitignore
@@ -2,4 +2,4 @@ server
 
 # To not accidentally reveal answers. If you're student copying the application you may remove this.
 # Dockerfile
-docker-compose.yml
+# docker-compose.yml
